Issue #784: Implement new admin theme styles for pager.

--- a/modules/system/css/system.theme.css
+++ b/modules/system/css/system.theme.css
@@ -174,6 +174,7 @@ abbr.form-required, abbr.tabledrag-changed, abbr.ajax-changed {
   display: inline;
   list-style-type: none;
   padding: 0.5em;
+  margin: 0;
 }
 .pager-current {
   font-weight: bold;
