--- a/themes/seven/css/style.css
+++ b/themes/seven/css/style.css
@@ -432,21 +432,18 @@ table {
   width: 100%;
   font-size: 0.923em;
   margin: 0 0 10px;
-  border: 1px solid #bebfb9;
+  border: 0;
 }
 td,
 th {
   vertical-align: middle;
-  padding: 8px 10px;
+  padding: 15px 20px;
   border: 0;
-  color: #000;
 }
 tr.even,
 tr.odd {
-  border-width: 0 1px 0 1px;
-  border-style: solid;
-  border-color: #bebfb9;
-  background: #f3f4ee;
+  border: 0;
+  background: #f7f7f7;
 }
 tr.odd {
   background: #fff;
@@ -459,12 +456,16 @@ tr.drag-previous {
 }
 th {
   text-transform: uppercase;
-  background: #e1e2dc;
-  font-weight: normal;
-  border-width: 1px;
-  border-style: solid;
-  border-color: #bebfb9;
-  padding: 3px 10px;
+  background: #e9e8e8;
+  color: #000;
+  font-weight: 600;
+  border: 0;
+}
+th:first-child {
+  border-radius: 4px 0 0;
+}
+th:last-child {
+  border-radius: 0 4px 0 0;
 }
 /**
  * Force browsers to calculate the width of a 'select all' TH element.
@@ -473,7 +474,8 @@ th.select-all {
   width: 1px;
 }
 th.active {
-  background: #bdbeb9;
+  background: #444b53;
+  color: #ffffff;
 }
 th a {
   display: block;
@@ -481,6 +483,7 @@ th a {
 }
 th.active a {
   padding: 0 25px 0 0; /* LTR */
+  color: #ffffff;
 }
 [dir="rtl"] table th.active a {
   padding: 0 0 0 25px;
@@ -495,10 +498,10 @@ th.active img {
   right: auto;
 }
 td.active {
-  background: #e9e9dd;
+  background: #e9e8e8;
 }
 tr.odd td.active {
-  background: #f3f4ee;
+  background: #F5F5F5;
 }
 tr.selected td.active,
 tr.selected td {
@@ -523,17 +526,6 @@ tr.selected td {
 .system-status-report tr.error {
   color: #8c2e0b;
   background-color: #fef5f1;
-}
-/**
- * Exception for webkit bug with the right border of the last cell
- * in some tables, since it's webkit only, we can use :last-child
- */
-tr td:last-child {
-  border-right: 1px solid #bebfb9; /* LTR */
-}
-[dir="rtl"] tr td:last-child {
-  border-left: 1px solid #bebfb9;
-  border-right: none;
 }
 
 /**
