Issue #736: Styled system messages based on new designs
Added SVG and PNG fallbacks for all images related to messages
There were related icons in misc that I went ahead and updated from font-awesome, even though I'm not sure where the styles are for those other messages?
Simplified some of the css selectors so they're lower specificity, some still required a tag and class selector, most did not. Lower specificity will make it easier for others to override our styles.
Leaving more text styles to defaults instead to make overriding easier
Added mobile styling so messages work well on smaller screens
Made spacing tighter below 600px
Used smaller graphic below 600px
Re-organized code a little differently so it made more sense iwth the media queries
Added SVG using progressive enhancement technique based on browser compatability
Added db log support for new icons

--- a/modules/dblog/css/dblog.css
+++ b/modules/dblog/css/dblog.css
@@ -65,10 +65,12 @@
 }
 .admin-dblog .dblog-warning .icon {
   background-image: url(../../../misc/message-16-warning.png);
+  background-color: #FCE400;
 }
 .admin-dblog .dblog-error .icon,
 .admin-dblog .dblog-critical .icon,
 .admin-dblog .dblog-alert .icon,
 .admin-dblog .dblog-emergency .icon {
   background-image: url(../../../misc/message-16-error.png);
+  background-color: #EE3D23;
 }
