--- a/themes/seven/css/seven.base.css
+++ b/themes/seven/css/seven.base.css
@@ -4,7 +4,7 @@
 body {
   color: #000;
   background: #fff;
-  font: normal 81.3%/1.538em "Lucida Grande", "Lucida Sans Unicode", sans-serif;
+  font: normal 81.3%/1.538 "Open Sans", "Lucida Grande", "Lucida Sans Unicode", sans-serif;
 }
 a,
 .link {
