--- a/modules/dblog/css/dblog.css
+++ b/modules/dblog/css/dblog.css
@@ -60,17 +60,26 @@
   background: #eeb9b9;
 }
 .admin-dblog .icon {
-  background: no-repeat center;
-  width: 16px;
+  width: 30px;
 }
-.admin-dblog .dblog-warning .icon {
-  background-image: url(../../../misc/message-16-warning.png);
-  background-color: #FCE400;
+.admin-dblog .icon:before {
+  content: "";
+  display: block;
+  width: 30px;
+  height: 30px;
+  border-radius: 15px;
 }
-.admin-dblog .dblog-error .icon,
-.admin-dblog .dblog-critical .icon,
-.admin-dblog .dblog-alert .icon,
-.admin-dblog .dblog-emergency .icon {
-  background-image: url(../../../misc/message-16-error.png);
-  background-color: #EE3D23;
+.admin-dblog .dblog-warning .icon:before {
+  background: #FCE400 url(../../../misc/message-16-warning.png) no-repeat center center;
+}
+.admin-dblog .dblog-error .icon:before,
+.admin-dblog .dblog-critical .icon:before,
+.admin-dblog .dblog-alert .icon:before,
+.admin-dblog .dblog-emergency .icon:before {
+  background: #EE3D23 url(../../../misc/message-16-error.png) no-repeat center center;
+}
+.admin-dblog .dblog-debug .icon:before,
+.admin-dblog .dblog-info .icon:before,
+.admin-dblog .dblog-notice .icon:before {
+  background: #ccc url(../../../misc/message-16-info.png) no-repeat center center;
 }
