--- a/modules/system/css/system.admin.css
+++ b/modules/system/css/system.admin.css
@@ -88,8 +88,7 @@ small .admin-link:after {
   width: 70px;
 }
 #system-modules td.operations {
-  width: 125px;
-  position: relative;
+  width: 105px;
 }
 div.admin-requirements,
 div.admin-required {
@@ -114,10 +113,10 @@ table.system-status-report td {
   vertical-align: middle;
 }
 table.system-status-report tr.merge-up td {
-  padding: 0 6px 8px 28px; /* LTR */
+  padding: 0 6px 8px 40px; /* LTR */
 }
 [dir="rtl"] table.system-status-report tr.merge-up td {
-  padding: 0 28px 8px 6px;
+  padding: 0 40px 8px 6px;
 }
 table.system-status-report td.status-icon {
   width: 16px;
@@ -129,14 +128,21 @@ table.system-status-report td.status-icon {
 }
 table.system-status-report td.status-icon div {
   background-repeat: no-repeat;
-  height: 16px;
-  width: 16px;
+  width: 28px;
+  height: 28px;
 }
-table.system-status-report tr.error td.status-icon div {
-  background-image: url(../../../misc/message-16-error.png);
+table.system-status-report td.status-icon div:before {
+  content: "";
+  display: block;
+  width: 28px;
+  height: 28px;
+  border-radius: 15px;
 }
-table.system-status-report tr.warning td.status-icon div {
-  background-image: url(../../../misc/message-16-warning.png);
+table.system-status-report tr.error td.status-icon div:before {
+  background: #EE3D23 url(../../../misc/message-16-error.png) no-repeat center center;
+}
+table.system-status-report tr.warning td.status-icon div:before {
+  background: #FCE400 url(../../../misc/message-16-warning.png) no-repeat center center;
 }
 tr.merge-down,
 tr.merge-down td {
