--- a/modules/system/css/system.theme.css
+++ b/modules/system/css/system.theme.css
@@ -112,9 +112,15 @@ input.form-checkbox,
 input.form-radio {
   vertical-align: middle;
 }
-.marker,
 .form-required {
   color: #f00;
+}
+.marker{
+  font-size:0.9em;
+  background-color:#DDD;
+  padding:0 0.4em;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
 }
 abbr.form-required, abbr.tabledrag-changed, abbr.ajax-changed {
   border-bottom: none;
