Issue #760 Marks for new and updated
Changed colours
https://github.com/backdrop/backdrop-issues/issues/760#issuecomment-95418146

--- a/modules/system/css/system.theme.css
+++ b/modules/system/css/system.theme.css
@@ -116,9 +116,10 @@ input.form-radio {
   color: #f00;
 }
 .marker{
-  font-size:0.9em;
-  background-color:#DDD;
-  padding:0 0.4em;
+  font-size: 0.9em;
+  color: #234600;
+  background-color: #e6f2ba;
+  padding: 0 0.4em;
   -moz-border-radius: 3px;
   border-radius: 3px;
 }
