--- a/themes/seven/css/style.css
+++ b/themes/seven/css/style.css
@@ -643,7 +643,6 @@ fieldset fieldset fieldset {
  */
 .form-item {
   padding: 0;
-  margin: 0 0 10px;
 }
 .filter-wrapper .form-item,
 div.teaser-checkbox .form-item,
@@ -666,8 +665,10 @@ div.teaser-checkbox .form-item,
   font-size: 0.923em;
   text-transform: none;
 }
-.form-item label.option input {
+.form-item input.form-radio,
+.form-item input.form-checkbox {
   vertical-align: middle;
+  margin-right: 5px;
 }
 .form-disabled input.form-autocomplete,
 .form-disabled input.form-text,
@@ -696,12 +697,10 @@ div.teaser-checkbox .form-item,
 .filter-wrapper .filter-guidelines,
 .filter-wrapper .filter-help {
   font-size: 0.923em;
-  padding: 2px 0 0 0; /* LTR */
-}
-[dir="rtl"] .filter-wrapper .form-item,
-[dir="rtl"] .filter-wrapper .filter-guidelines,
-[dir="rtl"] .filter-wrapper .filter-help {
   padding: 2px 0 0 0;
+}
+.filter-wrapper .form-item label {
+  font-weight: normal;
 }
 ul.tips,
 div.description,
@@ -743,51 +742,50 @@ body div.form-type-checkbox div.description {
 }
 input.form-submit,
 a.button {
-  cursor: pointer;
-  padding: 4px 17px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #444b53;
+  background: #e5e5e6;
+  letter-spacing: 0.4px;
+  line-height: 46px;
+  border: 0;
+  padding: 0 25px;
   margin-bottom: 1em;
   margin-right: 1em; /* LTR */
-  color: #5a5a5a;
-  text-align: center;
-  font-weight: normal;
-  font-size: 1.077em;
-  font-family: "Lucida Grande", Verdana, sans-serif;
-  border: 1px solid #e4e4e4;
-  border-bottom: 1px solid #b4b4b4;
-  border-left-color: #d2d2d2;
-  border-right-color: #d2d2d2;
-  background: url(../images/buttons.png) 0 0 repeat-x;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  border-radius: 20px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  transition: background-color 0.6s ease 0s, color 0.6s ease 0s;
 }
 [dir="rtl"] input.form-submit,
 [dir="rtl"] a.button {
   margin-left: 1em;
   margin-right: 0;
 }
+.form-managed-file input.form-submit {
+  margin-left: .5em; /* LTR */
+  position: relative;
+  top: 1px;
+}
+[dir="rtl"] .form-managed-file input.form-submit {
+  margin-left: 0;
+  margin-right: .5em;
+}
+a.button:hover,
+input.form-submit:hover {
+  text-decoration: none;
+  background-color: #CFDE56;
+  border-color: #CFDE56;
+}
 a.button:link,
 a.button:visited,
-a.button:hover,
-a.button:active {
+a.button:active,
+input.form-submit:active {
+  /* @todo, decide on an active state */
   text-decoration: none;
-  color: #5a5a5a;
-}
-.node-form input#edit-submit,
-.node-form input#edit-submit-1 {
-  border: 1px solid #8eB7cd;
-  border-left-color: #8eB7cd;
-  border-right-color: #8eB7cd;
-  border-bottom-color: #7691a2;
-  background: url(../images/buttons.png) 0 -40px repeat-x;
-  color: #133B54;
-}
-input.form-submit:active,
-a.button:active {
-  background: #666;
-  color: #fff;
-  border-color: #555;
-  text-shadow: #222 0 -1px 0;
+  background-color: #CFDE56;
+  border-color: #CFDE56;
+  box-shadow: 0 0 5px rgba(220, 220, 220, 1);
 }
 input.form-button-disabled,
 input.form-button-disabled:active {
@@ -805,8 +803,7 @@ input.form-color,
 input.form-number,
 input.form-search,
 input.form-file,
-textarea.form-textarea,
-select.form-select {
+textarea.form-textarea {
   font-weight: 400;
   border: 0;
   padding: 10px;
@@ -823,6 +820,32 @@ select.form-select {
   -ms-transition: all 0.25s ease-in-out;
   -o-transition: all 0.25s ease-in-out;
 }
+select.form-select {
+  font-weight: 400;
+  border: 2px solid rgba(208,208,208,1);
+  padding: 10px;
+  color: #444b53;
+  background: #fff;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+}
+select.form-select:focus {
+  color: #000;
+  border-color: rgba(4, 148, 219, 0.75);
+  -webkit-box-shadow: 0 0 5px rgba(220, 220, 220, 1);
+  -moz-box-shadow: 0 0 5px rgba(220, 220, 220, 1);
+  box-shadow: 0 0 5px rgba(220, 220, 220, 1);
+}
+/* de-emphasize the text format */
+select.filter-list {
+  padding: 2px 8px;
+  margin-left: 5px; /* LTR */
+}
+[dir="rtl"] select.filter-list {
+  margin-left: 0;
+  margin-right: 5px;
+}
 input.form-text:focus,
 input.form-tel:focus,
 input.form-email:focus,
@@ -831,8 +854,7 @@ input.form-color:focus,
 input.form-number:focus,
 input.form-search:focus,
 input.form-file:focus,
-textarea.form-textarea:focus,
-select.form-select:focus {
+textarea.form-textarea:focus {
   outline: 0;
   color: #000;
   -webkit-box-shadow: 0 0 5px rgba(220, 220, 220, 1), inset 0px 0px 0px 2px rgba(4, 148, 219, 0.75);
