Issue #876: Add hover color to tr tags

--- a/themes/seven/css/style.css
+++ b/themes/seven/css/style.css
@@ -477,6 +477,9 @@ tr.drag {
 tr.drag-previous {
   background: #ffb;
 }
+tr:hover {
+  background: #ffff99;
+}
 th {
   text-transform: uppercase;
   background: #e9e8e8;
