Issue #785: Apply styleguide changes to dropbutton.

--- a/misc/dropbutton.theme.css
+++ b/misc/dropbutton.theme.css
@@ -1,4 +1,3 @@
-
 /**
  * @file
  * General styles for dropbuttons.
@@ -25,10 +24,8 @@
   border-left: 1px solid #e8e8e8;
   border-right: 0 none;
 }
-.dropbutton-multiple .dropbutton .dropbutton-action > * {
-  margin-right: 0.25em; /* LTR */
-}
-[dir="rtl"] .dropbutton-multiple .dropbutton .dropbutton-action > * {
-  margin-left: 0.25em;
-  margin-right: 0;
+
+.js .dropbutton button:hover,
+.js .dropbutton a:hover {
+  background-color: #f7f7f7;
 }
