--- a/misc/dropbutton.css
+++ b/misc/dropbutton.css
@@ -1,17 +1,8 @@
-
 /**
  * @file
  * Base styles for dropbuttons.
  */
 
-/**
- * Set width of dropbuttons where extra width is needed
- */
-#system-modules .dropbutton-wrapper div,
-#layout-edit .dropbutton-multiple div,
-#layout-list .dropbutton-wrapper div {
-  min-width: 140px;
-}
 /**
  * When a dropbutton has only one option, it is simply a button.
  */
@@ -21,31 +12,24 @@
   box-sizing: border-box;
 }
 .js .dropbutton-wrapper {
-  display: block;
   min-height: 2em;
   position: relative;
+  width: auto;
 }
-.js .dropbutton-wrapper,
-.js .dropbutton-widget {
-  max-width: 100%;
-}
+
 @media screen and (max-width:600px) {
   .js .dropbutton-wrapper {
     width: 100%;
   }
 }
 
-/* Splitbuttons */
-.form-actions .dropbutton-wrapper {
-  float: left;
-}
-.js .form-actions .dropbutton-widget {
-  position: static;
-}
-
-
 .js .dropbutton-widget {
   position: absolute;
+  top: 0;
+  right: 0;
+}
+.js td .dropbutton-widget {
+  right: auto;
 }
 /* UL styles are over-scoped in core, so this selector needs weight parity. */
 .js .dropbutton-widget .dropbutton {
@@ -58,7 +42,6 @@
 .js .dropbutton li,
 .js .dropbutton a {
   display: block;
-  text-transform: uppercase;
 }
 
 /**
@@ -71,6 +54,11 @@
  * The arrow is created using border on a zero-width, zero-height span.
  * The arrow inherits the link color, but can be overridden with border colors.
  */
+.js .dropbutton-widget {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
 .js .dropbutton-multiple .dropbutton-widget {
   padding-right: 2em; /* LTR */
 }
@@ -84,6 +72,40 @@
 }
 .dropbutton-multiple.open {
   z-index: 100;
+}
+.dropbutton a {
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+}
+.dropbutton-multiple .dropbutton a {
+  /* LTR */
+  -webkit-border-top-left-radius: 5px;
+  -webkit-border-bottom-left-radius: 5px;
+  -moz-border-radius-topleft: 5px;
+  -moz-border-radius-bottomleft: 5px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  -webkit-border-top-right-radius: 0;
+  -webkit-border-bottom-right-radius: 0;
+  -moz-border-radius-topright: 0;
+  -moz-border-radius-bottomright: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+[dir="rtl"] .dropbutton-multiple .dropbutton a {
+  -webkit-border-top-left-radius: 0;
+  -webkit-border-bottom-left-radius: 0;
+  -moz-border-radius-topleft: 0;
+  -moz-border-radius-bottomleft: 0;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  -webkit-border-top-right-radius:5px;
+  -webkit-border-bottom-right-radius: 5px;
+  -moz-border-radius-topright: 5px;
+  -moz-border-radius-bottomright: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
 .dropbutton-multiple .dropbutton .secondary-action {
   display: none;
@@ -106,6 +128,13 @@
   right: auto;
 }
 .dropbutton-toggle button {
+  /* LTR */
+  -webkit-border-top-right-radius: 5px;
+  -webkit-border-bottom-right-radius: 5px;
+  -moz-border-radius-topright: 5px;
+  -moz-border-radius-bottomright: 5px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
   background: none;
   border: 0;
   cursor: pointer;
@@ -114,6 +143,20 @@
   margin: 0;
   padding: 0;
   width: 100%;
+}
+[dir="rtl"] .dropbutton-toggle button {
+  -webkit-border-top-right-radius: 0;
+  -webkit-border-bottom-right-radius: 0;
+  -moz-border-radius-topright: 0;
+  -moz-border-radius-bottomright: 0;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  -webkit-border-top-left-radius: 5px;
+  -webkit-border-bottom-left-radius: 5px;
+  -moz-border-radius-topleft: 5px;
+  -moz-border-radius-bottomleft: 5px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
 }
 .dropbutton-arrow {
   border-bottom-color: transparent;
