--- a/modules/system/css/system.admin.css
+++ b/modules/system/css/system.admin.css
@@ -88,7 +88,8 @@ small .admin-link:after {
   width: 70px;
 }
 #system-modules td.operations {
-  width: 105px;
+  width: 125px;
+  position: relative;
 }
 div.admin-requirements,
 div.admin-required {
