--- a/themes/seven/css/style.css
+++ b/themes/seven/css/style.css
@@ -1192,41 +1192,24 @@ div.add-or-remove-shortcuts {
 
 /* Dropbutton */
 .js .dropbutton-widget {
-  background-color: #fff;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
+  border: 1px solid #E9E8E8;
 }
-.js .dropbutton-widget:hover {
-  background-color: #f0f0f0;
-  border-color: #b8b8b8;
+.js .dropbutton-wrapper.open .dropbutton-widget {
+  border-color: #0d68a6;
 }
-.js .dropbutton-multiple.open .dropbutton-widget:hover {
-  background-color: #fff;
+.js .dropbutton a {
+  text-transform: uppercase;
 }
-.dropbutton-content li:first-child > * {
-  text-overflow: ellipsis;
-}
-.dropbutton-multiple.open .dropbutton-content li:first-child > * {
-  text-overflow: clip;
+.js .dropbutton a:hover {
+  text-decoration: none;
 }
 
-.js .form-actions .dropbutton-widget:focus,
-.js .form-actions .dropbutton-widget:hover {
-  background-color: #73b3dd;
-  border: 1px solid #6ea3bf;
-  border-bottom-color: #4680a0;
+.views-ui-display-tab-actions .dropbutton-wrapper input.form-submit {
+  background-color: #ffffff;
+  color: #0074bd;
 }
-.js .form-actions .dropbutton-widget:active {
-  background-color: #3981b1;
-  border: 1px solid #36647c;
-  border-bottom-color: #284657;
-}
-.js .form-actions .dropbutton-multiple.open .dropbutton-widget:hover {
-  background-color: #9dcae7;
-}
-.js .form-actions .dropbutton-multiple.open .dropbutton-action:hover {
-  background-color: #73b3dd;
+.views-ui-display-tab-actions .dropbutton-wrapper input.form-submit:hover {
+  background-color: #f7f7f7;
 }
 
 @media all and (min-width: 768px) {
