--- a/themes/seven/css/style.css
+++ b/themes/seven/css/style.css
@@ -1374,3 +1374,67 @@ div.add-or-remove-shortcuts {
     right: auto;
   }
 }
+
+/**
+ * Progress Bar
+ * See system module
+ */
+.progress {
+  font-weight: bold;
+}
+.progress .bar {
+  margin: 0 0.2em .5em 0;
+  border: 2px solid #e5e5e6;
+  border-radius: 3px;
+  overflow: hidden;
+  background: #e5e5e6;
+}
+.progress .filled {
+  position: relative;
+  overflow: hidden;
+  background: #CFDE56;
+  -webkit-transition: width .4s;
+  transition: width .4s;
+  will-change: width;
+}
+/* Progress Bar Animation */
+.progress .filled:after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 15%;
+  height: 100%;
+  background: -webkit-linear-gradient(0deg, #CFDE56 0%, #dbe788 60%, #CFDE56 65%);
+  background: linear-gradient(90deg, #CFDE56 0%, #dbe788 60%, #CFDE56 65%);
+  background-color: #CFDE56;
+  border-radius: 3px;
+  background-size: auto 200%;
+  background-position: 0 100%;
+  -webkit-animation: progressGradient 3s infinite;
+  animation: progressGradient 3s infinite;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
+  -webkit-animation-timing-function: linear;
+  animation-timing-function: linear;
+  -webkit-transition: width .4s;
+  transition: width .4s;
+  will-change: left, width;
+}
+
+@-webkit-keyframes progressGradient {
+  0% {
+    left: -15%;
+  }
+  100% {
+    left: 100%;
+  }
+}
+
+@keyframes progressGradient {
+  0% {
+    left: -15%;
+  }
+  100% {
+    left: 100%;
+  }
+}
