--- a/themes/seven/css/style.css
+++ b/themes/seven/css/style.css
@@ -1267,12 +1267,40 @@ div.add-or-remove-shortcuts {
   text-decoration: none;
 }
 
+/* Dialogs */
+.ui-dialog .ui-dialog-titlebar {
+  background: #e9e8e8;
+  font-size: 1.2em;
+  font-weight: normal;
+}
+.ui-dialog {
+  border: 1px solid #d0d0d0;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 0 12px -8px #666;
+  -moz-box-shadow: 0 0 12px -8px #666;
+  box-shadow: 0 0 12px -8px #666;
+}
+.ui-dialog-titlebar {
+  border: 1px solid #d0d0d0;
+  border-bottom: none;
+  -webkit-border-radius: 4px 4px 0 0;
+  -moz-border-radius: 4px 4px 0 0;
+  border-radius: 4px 4px 0 0;
+}
+
+/* Views UI */
 .views-ui-display-tab-actions .dropbutton-wrapper input.form-submit {
   background-color: #ffffff;
   color: #0074bd;
 }
 .views-ui-display-tab-actions .dropbutton-wrapper input.form-submit:hover {
   background-color: #f7f7f7;
+}
+.views-ui-dialog #views-ajax-title,
+.views-ui-dialog .views-override {
+  background: #e9e8e8;
 }
 
 @media all and (min-width: 768px) {
