--- a/themes/seven/css/style.css
+++ b/themes/seven/css/style.css
@@ -832,7 +832,7 @@ button.button-primary:focus {
 input.button-secondary,
 button.button-secondary {
   color: #828188;
-  background-color: transparent;
+  background-color: white;
   -webkit-box-shadow: inset 0px 0px 0px 2px #97979e;
   -moz-box-shadow: inset 0px 0px 0px 2px #97979e;
   box-shadow: inset 0px 0px 0px 2px #97979e;
